# CAD

./: .gitignore  README.md
RemoteExecutor/: pom.xml
RemoteExecutor/baseScript/: MM_posix.c  ejecutor.py  lanzador.pl  matrixFxC.c  matrixFxT.c  modulo.c  modulo.h
RemoteExecutor/baseScript/ejemplos/c7i.8xlarge/: infoHardware.txt  resultados_summarAWS.csv
ScriptsEjecucion/: pom.xml
ScriptsEjecucion/baseScript/: CMakeLists.txt  lanzador.pl
ScriptsEjecucion/src/main/java/edu/javeriana/cad/: AWSRemoteUtils.java  CADExecuteFull.java  CADScriptsExecutor.java  SSHUtils.java  UnifierUtils.java
ScriptsEjecucion/src/main/java/edu/javeriana/cad/beans/: AWSInstanceElement.java  AWSInstanceState.java  AWSInstances.java  AWSReservations.java  AWSTerminatingInstance.java  AWSTerminatingInstances.java  DatoHardware.java  DatosInstancia.java  SSHConnectionInfo.java
ScriptsEjecucion/src/main/java/edu/javeriana/cad/instanceList/: ProcessAwsV1PricesText.java
ScriptsEjecucion/src/main/java/edu/javeriana/cad/instanceList/beans/: AwsPriceElement.java  ProductAttributes.java  ProductType.java  Terms.java
ScriptsEjecucion/src/main/java/edu/javeriana/cad/main/: MainExecuteFullTest.java
ScriptsEjecucion/src/main/resources/: cad-testing.pem  cad-testing.ppk
ScriptsEjecucion/src/test/java/edu/javeriana/cad/test/: TestCadAWS.java  TestEvaluateLSCPU.java  TestFullExecution.java  TestOtherMachines.java  TestReadAWSJsons.java  TestSSHUtils.java
ScriptsEjecucion/src/test/java/edu/javeriana/cad/test/beans/: InstanceInformation.java
